name:                hentr
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Takashi Kawachi
maintainer:          tkawachi@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hentr
  main-is:             Hentr.hs
  build-depends:       base,
                       fsnotify,
                       system-filepath,
                       text
  hs-source-dirs:      bin
  default-language:    Haskell2010
